--- a/rolling/linux-aufs-git/PKGBUILD
+++ b/rolling/linux-aufs-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-aufs-git
 # pkgname=('linux-aufs-git' 'linux-aufs-git-headers' 'linux-aufs-git-docs')
 _major=5.16
 _srcname=linux
-pkgver=5.16.7.r28063.gb5079116db40
-pkgrel=3
+pkgver=5.16.9.r28064.gb621c9fbf0c2
+pkgrel=1
 pkgdesc='Linux AUFS'
 arch=('x86_64')
 url="https://github.com/sfjro/aufs5-standalone"
@@ -325,4 +325,4 @@ sha512sums=('SKIP'
             '95b13eb881ce1fdfa37a1322d9bde3bba54f635b06e3e8f4ef9de8e0ed6c8b11d91cd6d2f56fa38a0f7a0425c8bc02889f3d138781baed107c8ee427146f2c53'
             'a46a2fea4b2c83e2569cdd343933bb991466752d3c28d70698b1c477134ac0db7d400e03ea569d4f2e73c3e98cc2b5760a7588faf85dc210c1f5786ad01f66ab'
             '748cd685447336ce0d43fca04dd489176777364030c2d0d24b782123c49b01bfd8e4c672a119478be81084db1637bd590b860b92fd2fd53c6259d7f3858448ff'
-            'b2ff5f81d121037562d37dfc7dfaf77c80d40bac5542dde72baceb070577445d51f3a2892861608a5f81f90a1b31f2c04492cf03dc22995e58135ed929a1aa22')
+            '66fb76586b410c62532e0fd6917a3c08507fae8260929d64464a18492abbe2b996af7f3734929798bf5163d1ece48d189454d34708cd146de93aeb3ed9507204')
