--- a/rolling/linux-uksm-git/PKGBUILD
+++ b/rolling/linux-uksm-git/PKGBUILD
@@ -49,8 +49,8 @@ pkgbase=linux-uksm-git
 # pkgname=('linux-uksm-git' 'linux-uksm-git-headers' 'linux-uksm-git-docs')
 _major=5.16
 _srcname=linux
-pkgver=5.16.7.r28063.gb5079116db40
-pkgrel=3
+pkgver=5.16.9.r28064.gb621c9fbf0c2
+pkgrel=1
 pkgdesc='Linux UKSM'
 arch=('x86_64')
 url="https://github.com/dolohow/uksm"
@@ -326,4 +326,4 @@ sha512sums=('SKIP'
             '95b13eb881ce1fdfa37a1322d9bde3bba54f635b06e3e8f4ef9de8e0ed6c8b11d91cd6d2f56fa38a0f7a0425c8bc02889f3d138781baed107c8ee427146f2c53'
             'a46a2fea4b2c83e2569cdd343933bb991466752d3c28d70698b1c477134ac0db7d400e03ea569d4f2e73c3e98cc2b5760a7588faf85dc210c1f5786ad01f66ab'
             '748cd685447336ce0d43fca04dd489176777364030c2d0d24b782123c49b01bfd8e4c672a119478be81084db1637bd590b860b92fd2fd53c6259d7f3858448ff'
-            'afb91da3b0e1b665c8ae0d193605aa080df99a90d6284476adc09517ae7eea36ddc8a428df4fd39a082214de9c3e0aab124badd649fe61cfd6c40b98ab7ac9cb')
+            '4920cf17838c3fc50c757218772c12e844449dd14536a9b8fc2a4dc5ddc4cf8ff8eac3b49b3295799feb590b7d65040a3cd56c28a8425c3925eef07401eeb82a')
