--- a/stable-rc/linux-bfq-dev-git/PKGBUILD
+++ b/stable-rc/linux-bfq-dev-git/PKGBUILD
@@ -43,6 +43,12 @@ _use_current=
 ### Running with a 1000 HZ tick rate
 _1k_HZ_ticks=
 
+### Download bfq patchset
+# ATTENTION - one of two predefined values should be selected!
+# 'stable' - stable releases (recommended)
+# 'unstable' - dev releases
+_bfq_ver='stable'
+
 ### Do not edit below this line unless you know what you're doing
 
 pkgbase=linux-bfq-dev-git
@@ -50,7 +56,7 @@ pkgbase=linux-bfq-dev-git
 _major=5.17
 _srcname=linux-stable-rc
 pkgver=5.17.2.r340.ge5a51d774e89
-pkgrel=0
+pkgrel=0.1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
@@ -61,24 +67,26 @@ makedepends=('bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
              'texlive-latexextra' 'xmlto')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
-# Some patches for BFQ conflict with patches for BFQ-dev.
-# To use linux-bfq-dev smoothly apply bfq-reverts before bfq-dev patch.
-# Otherwise the kernel will not compile.
-#_bfq_rev_path="bfq-reverts-all"
-#_bfq_rev_patch="0001-bfq-reverts.patch"
-#_bfq_path="bfq-dev-lucjan"
-#_bfq_ver="v14"
-#_bfq_rel="r2K210223"
-#_bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
-_bfq_path="bfq-lucjan"
-_bfq_rel="r2K220408v3"
-_bfq_patch="${_major}-${_bfq_path}-${_bfq_rel}.patch"
+
+if [ "$_bfq_ver" = "stable" ]; then
+
+ _bfq_name='bfq-lucjan'
+ _bfq_ver='r2K220408v3'
+ _bfq_patch="${_major}-${_bfq_name}-${_bfq_ver}.patch"
+
+elif [ "$_bfq_ver" = "unstable" ]; then
+
+ _bfq_name='bfq-dev-lucjan'
+ _bfq_ver='r2K220408v3'
+ _bfq_patch="${_major}-${_bfq_name}-${_bfq_ver}.patch"
+
+fi
+
 _compiler_path="cpu-patches-sep"
 _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-${_major}.y"
-        #"${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
-        "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
+        "${_lucjanpath}/${_bfq_name}/${_bfq_patch}"
         "${_lucjanpath}/${_compiler_path}/${_compiler_patch}"
         "${_lucjanpath}/arch-patches-v12-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
         "${_lucjanpath}/arch-patches-v12-sep/0002-random-treat-bootloader-trust-toggle-the-same-way-as.patch"
