--- a/rolling/linux-bfq-dev-git/PKGBUILD
+++ b/rolling/linux-bfq-dev-git/PKGBUILD
@@ -43,49 +43,57 @@ _use_current=
 ### Running with a 1000 HZ tick rate
 _1k_HZ_ticks=
 
+### Download bfq patchset
+# ATTENTION - one of two predefined values should be selected!
+# 'stable' - stable releases (recommended)
+# 'unstable' - dev releases
+_bfq_rel='stable'
+
 ### Do not edit below this line unless you know what you're doing
 
 pkgbase=linux-bfq-dev-git
 # pkgname=('linux-bfq-dev-git' 'linux-bfq-dev-git-headers' 'linux-bfq-dev-git-docs')
-_major=5.16
+_major=5.17
 _srcname=linux
-pkgver=5.16.13.r28068.gc5e8898b8ec5
-pkgrel=2
+pkgver=5.17.3.r31930.gaeeb1f66846d
+pkgrel=1
 pkgdesc='Linux BFQ-dev'
 arch=('x86_64')
 url="https://github.com/sirlucjan/bfq-mq-lucjan"
 license=('GPL2')
 options=('!strip')
-makedepends=('kmod' 'bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
-             'graphviz' 'imagemagick' 'pahole' 'cpio' 'perl' 'tar' 'xz')
+makedepends=('bc' 'libelf' 'git' 'python-sphinx' 'python-sphinx_rtd_theme'
+             'graphviz' 'imagemagick' 'pahole' 'cpio' 'perl' 'tar' 'xz'
+             'texlive-latexextra' 'xmlto')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
-# Some patches for BFQ conflict with patches for BFQ-dev.
-# To use linux-bfq-dev smoothly apply bfq-reverts before bfq-dev patch.
-# Otherwise the kernel will not compile.
-#_bfq_rev_path="bfq-reverts-all"
-#_bfq_rev_patch="0001-bfq-reverts.patch"
-#_bfq_path="bfq-dev-lucjan"
-#_bfq_ver="v14"
-#_bfq_rel="r2K210223"
-#_bfq_patch="${_major}-${_bfq_path}-${_bfq_ver}-${_bfq_rel}.patch"
-_bfq_path="bfq-lucjan"
-_bfq_rel="r2K220307v1"
-_bfq_patch="${_major}-${_bfq_path}-${_bfq_rel}.patch"
+
+if [ "$_bfq_rel" = "stable" ]; then
+
+ _bfq_name='bfq-lucjan'
+ _bfq_ver='r2K220408v3'
+ _bfq_patch="${_major}-${_bfq_name}-${_bfq_ver}.patch"
+
+elif [ "$_bfq_rel" = "unstable" ]; then
+
+ _bfq_name='bfq-dev-lucjan'
+ _bfq_ver='r2K220408v3'
+ _bfq_patch="${_major}-${_bfq_name}-${_bfq_ver}.patch"
+
+fi
+
 _compiler_path="cpu-patches-sep"
 _compiler_patch="0001-cpu-${_major}-merge-graysky-s-patchset.patch"
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/${_srcname}.git#branch=linux-rolling-stable"
-        #"${_lucjanpath}/${_bfq_rev_path}/${_bfq_rev_patch}"
-        "${_lucjanpath}/${_bfq_path}/${_bfq_patch}"
+        "${_lucjanpath}/${_bfq_name}/${_bfq_patch}"
         "${_lucjanpath}/${_compiler_path}/${_compiler_patch}"
-        "${_lucjanpath}/arch-patches-v5-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
-        "${_lucjanpath}/arch-patches-v5-sep/0002-Bluetooth-btintel-Fix-bdaddress-comparison-with-garb.patch"
-        "${_lucjanpath}/arch-patches-v5-sep/0003-Bluetooth-Read-codec-capabilities-only-if-supported.patch"
-        "${_lucjanpath}/arch-patches-v5-sep/0004-Bluetooth-fix-deadlock-for-RFCOMM-sk-state-change.patch"
-        "${_lucjanpath}/arch-patches-v5-sep/0005-mt76-mt7921-add-support-for-PCIe-ID-0x0608-0x0616.patch"
-        "${_lucjanpath}/arch-patches-v5-sep/0006-mt76-mt7921-reduce-log-severity-levels-for-informati.patch"
-        "${_lucjanpath}/arch-patches-v5-sep/0007-Revert-NFSv4.1-query-for-fs_location-attr-on-a-new-f.patch"
+        "${_lucjanpath}/arch-patches-v12-sep/0001-ZEN-Add-sysctl-and-CONFIG-to-disallow-unprivileged-C.patch"
+        "${_lucjanpath}/arch-patches-v12-sep/0002-random-treat-bootloader-trust-toggle-the-same-way-as.patch"
+        "${_lucjanpath}/arch-patches-v12-sep/0003-tick-Detect-and-fix-jiffies-update-stall.patch"
+        "${_lucjanpath}/arch-patches-v12-sep/0004-tick-rcu-Remove-obsolete-rcu_needs_cpu-parameters.patch"
+        "${_lucjanpath}/arch-patches-v12-sep/0005-tick-rcu-Stop-allowing-RCU_SOFTIRQ-in-idle.patch"
+        "${_lucjanpath}/arch-patches-v12-sep/0006-lib-irq_poll-Declare-IRQ_POLL-softirq-vector-as-ksof.patch"
          # the main kernel config files
         'config')
 
@@ -197,7 +205,7 @@ build() {
 _package() {
     pkgdesc="The $pkgdesc kernel and modules"
     depends=('coreutils' 'kmod' 'initramfs')
-    optdepends=('crda: to set the correct wireless channels of your country'
+    optdepends=('wireless-regdb: to set the correct wireless channels of your country'
                 'linux-firmware: firmware images needed for some devices'
                 'modprobed-db: Keeps track of EVERY kernel module that has ever been probed - useful for those of us who make localmodconfig')
     provides=(VIRTUALBOX-GUEST-MODULES WIREGUARD-MODULE linux-bfq-git)
@@ -217,7 +225,8 @@ _package() {
   echo "$pkgbase" | install -Dm644 /dev/stdin "$modulesdir/pkgbase"
 
   echo "Installing modules..."
-  make INSTALL_MOD_PATH="$pkgdir/usr" INSTALL_MOD_STRIP=1 modules_install
+  make INSTALL_MOD_PATH="$pkgdir/usr" INSTALL_MOD_STRIP=1 \
+    DEPMOD=/doesnt/exist modules_install  # Suppress depmod
 
   # remove build and source links
   rm "$modulesdir"/{source,build}
@@ -340,13 +349,12 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            'e5731b69f3be5d81d642394c0df460d7f23009786737fc972c56f4ac8e197042fb9456e3827c441ea17596e5b59b712b40e7d635c516f8e6baadc650bb8bac13'
-            '5cb79731f957372cbd3ddaf93ac1cbc6eca4a526225f5bbe9c5eed11529fbefa66934ac5002410505df84281144da15e39326a8df886fe45da937304ed0b6fcf'
-            '860c3d6f0c1b4528e11ce3e99cb0c3acf67f8f657f1471774bd14d75bdc92a72eb33d60fc3b7fd7465b2716733a5c7ad9d07107f96f2a568505573618583d5dd'
-            'ab229799fe12a9a9b1f52ea8714abaa66085a3173f04e2d5e533b0920ba8b72e41c37ab7332db8b15b1810b9b14baf84777128de9d3495f7b438cdb5805f1a25'
-            '8b4d881cde779b016ea01f959130c2ad0f511aa09e11b7c725acdc06baf536d3ca5ff8284dfb8fd0321f04a338a6e144babfd679fed95717e47e93a787b3415a'
-            'e7c5d1bebafe300a67a3839094841c47b645653a14eb33dc9d63c29aaaed57d02ce723bd90a5bb48050f14d96b129d85f89fe74a7a13b30f99d4a0d98a1dfb55'
-            '56f7f517da01646ee9ef6a5842d2ec59fa77d8e280e34ea6aa9bba27bd5c8863b7659e1e792107be517e3ac77466ed57263bb0d5a9618cd7a2ad71b9639264d7'
-            'fe34ea8073cf29a53048be729f2ada6af38656d015061178452c6d60ab0f97f81e8d282193ba39dbba198263b3d2ff7f39ae33caded7b681600ae3391aa18a21'
-            'dbdb3daf6f309e79890bde2eb9b72e3f3fa9e55be395b2bfb6385179d48793cdd440fd757481281b081a10f1e28b172de0076a518831842b9ab444e4733df071'
-            '3d71c408cf6e440eceda64954175160dc32d146555d160ba05e8fd8e69cf4495c9cfb2f589a6dd70e53a1a0ce42fb72d6561ddfe8a2c755b68f5dbd2c8d90c4a')
+            '3c3d13f89209258218024223061099267e9836ba1794cda646d2d920c3dcf8b54424c6aff0f681e074293c104d2d9d767b223648558180431a7595dc47938a06'
+            'b63921b6246bd1b9545a8042d76334bef8a7ee46e5404c5efec4a842a455a84046e92423b2bc6d950f19dcf85805d7493fe71d6d177e3b46b52a279b0a44d0c9'
+            '6c6b336b7fe025154dc936aea8597f6efd0f7f7fd9dbe85fe2936dc8624da41e56b3b48420aaaa0a9d7d05e247ae7e4ce491eddd54bc74cac222aa9c4b5f5669'
+            '6861b1755b3ccf52ca75d187b380646f9ae2f35f5175a3181a90cef68125eca6bcdc2ebaf2013ff2ff966af4de49fd8e053149d9fd87792c53dc07f7eaaf04b0'
+            'ca52bd303f0b8deba29b1616f81c3195ce1a8cab16473d9d3e0315ef9ecaaa0922fdc0f10a80e28344cb1d2ad97d5ff2c36a26fe2ee4f68b4a783e873aaecacd'
+            '13603dd605f37151596960f0324d53e23be9285b417c5337549c2e94bd6d850baa80b2f40c02fc5c2422290b6ceb85b1b8ab50e725fb05ac607290a3d47cc9d8'
+            '45d8690b6d9f59a43152157d52a0f81c6d1fe8ec1f89c53b274651f3b3177f34bdc556938df1dfdc16471d34484d444cf0e64f8500421bd0eda1596bce289be9'
+            'dd10a6f2c86de10797485f96ca45c7bcaa03934303fee0178d9b0c60bda00fdcefbc1ac2fde35906b07b7803cf3d9085d39f661c6ab6e45bb27441408dcea086'
+            '15ffbb25ceaec17d567a114c22e8e8749a85969fdb7f85d74fdffeb600448c3c5819f5ed4a2e16de979a2558b5d5fadae03b7b351096d66aac578ce48392fead')
