--- a/rolling/linux-uksmd-git/PKGBUILD
+++ b/rolling/linux-uksmd-git/PKGBUILD
@@ -49,11 +49,11 @@ pkgbase=linux-uksmd-git
 # pkgname=('linux-uksmd-git' 'linux-uksmd-git-headers')
 _major=5.18
 _srcname=linux
-pkgver=5.18.6.r35437.g8bd1fe3e9207
+pkgver=5.18.10.r35441.g52db7442ab4d
 pkgrel=1
 pkgdesc='Linux UKSMD'
 arch=('x86_64')
-url="https://gitlab.com/post-factum/uksmd"
+url="https://codeberg.org/pf-kernel/uksmd"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'git')
