--- a/stable-rc/linux-uksmd-git/PKGBUILD
+++ b/stable-rc/linux-uksmd-git/PKGBUILD
@@ -49,11 +49,11 @@ pkgbase=linux-uksmd-git
 # pkgname=('linux-uksmd-git' 'linux-uksmd-git-headers')
 _major=5.18
 _srcname=linux-stable-rc
-pkgver=5.18.5.r142.g1cf3647a86ad
-pkgrel=0.1
+pkgver=5.18.9.r103.g7622cfa48fbd
+pkgrel=1
 pkgdesc='Linux UKSMD'
 arch=('x86_64')
-url="https://gitlab.com/post-factum/uksmd"
+url="https://codeberg.org/pf-kernel/uksmd"
 license=('GPL2')
 options=('!strip')
 makedepends=('bc' 'libelf' 'pahole' 'cpio' 'perl' 'tar' 'xz' 'git')
